(mq) Support virtual threads in MqSynchronousInbox